--- a/ohmygirl/app/public/css/main.css
+++ b/ohmygirl/app/public/css/main.css
@@ -1705,9 +1705,9 @@ input, select, textarea {
 			-webkit-transition-delay: 2.525s;
 			-ms-transition-delay: 2.525s;
 			transition-delay: 2.525s;
-			height: 30vh;
+			height: 100%;
 			min-height: 20em;
-			width: 25%;
+			width: 20%;
 		}
 
 			#main .thumb:nth-child(1) {
@@ -1801,9 +1801,9 @@ input, select, textarea {
 				-webkit-transition-delay: 2.075s;
 				-ms-transition-delay: 2.075s;
 				transition-delay: 2.075s;
-				height: 30vh;
+				height: 100%;
 				min-height: 20em;
-				width: 33.33333%;
+				width: 25%;
 			}
 
 				#main .thumb:nth-child(1) {
@@ -1878,9 +1878,9 @@ input, select, textarea {
 				-webkit-transition-delay: 1.625s;
 				-ms-transition-delay: 1.625s;
 				transition-delay: 1.625s;
-				height: 30vh;
+				height: 100%;
 				min-height: 20em;
-				width: 50%;
+				width: 33.33333%;
 			}
 
 				#main .thumb:nth-child(1) {
@@ -1934,7 +1934,7 @@ input, select, textarea {
 				-webkit-transition-delay: 2.075s;
 				-ms-transition-delay: 2.075s;
 				transition-delay: 2.075s;
-				height: 30vh;
+				height: 100%;
 				min-height: 18em;
 				width: 50%;
 			}
@@ -2011,7 +2011,7 @@ input, select, textarea {
 				-webkit-transition-delay: 1.175s;
 				-ms-transition-delay: 1.175s;
 				transition-delay: 1.175s;
-				height: 20vh;
+				height: 100%;
 				min-height: 18em;
 				width: 50%;
 			}
